Fix responsive image componente Content

--- a/frontEnd/src/app/components/content/content.component.html
+++ b/frontEnd/src/app/components/content/content.component.html
@@ -4,7 +4,7 @@
     <img src="../../../assets/media/logo.png" >
   </div>
   <!-- col-12 para celulares y col-md-8 para lo demás -->
-  <div class="col-12 col-md-9" >
-     <img src="../../../assets/media/construccion.jpg " style="max-width: 105%; height: 100%;">
+  <div class="col-12 col-md-9" style="background-image: url('../../../assets/media/construccion.jpg');" >
+
   </div>
 </div>
